debug css js files

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -8,4 +8,4 @@
     </section>
     <p>&copy; 2024 OS Creation Course. All rights reserved.</p>
 </footer>
-<script src="/js/scripts.js"></script>
+<script src="{{ site.baseUrl }}js/scripts.js"></script>
