fix lessons and quizzes

--- a/src/lessons/lesson.njk
+++ b/src/lessons/lesson.njk
@@ -12,4 +12,4 @@ eleventyComputed:
 
 <h1>{{ lesson.title }}</h1>
 <p>{{ lesson.content }}</p>
-<a href="/quizzes/{{ lesson.id }}.html">Take Quiz</a>
+<a href="{{ site.baseUrl }}quizzes/{{ lesson.id }}.html">Take Quiz</a>
