--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
         <link rel="stylesheet" href="{{ site.baseUrl }}css/styles.css">
+          <script>
+            window.baseUrl = '{{ site.baseUrl }}';
+        </script>
     </head>
     <body>
         {% include "header.njk" %}
