add code area for lessons

--- a/src/lessons/lesson.njk
+++ b/src/lessons/lesson.njk
@@ -13,6 +13,8 @@ eleventyComputed:
     <div class="container">
       <h1>{{ lesson.title }}</h1>
       <p>{{ lesson.content }}</p>
+      <p><strong>Example Code:</strong></p>
+      <pre>{{ lesson.exampleCode }}</pre>
       <a href="{{ site.baseUrl }}quizzes/{{ lesson.id }}.html">Take Quiz</a>
     </div>
 </main>
